// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Integrations matches snapshot 1`] = `
.emotion-33 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-0 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: 0 -11px;
  padding: 0 8px;
}

.emotion-1 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0 0 25px 0;
  padding: 0 12px;
  line-height: 1.47;
}

.emotion-6 {
  -webkit-flex: 0 1 364px;
  -ms-flex: 0 1 364px;
  flex: 0 1 364px;
  padding: 13px 11px;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #2e5bff;
  border-radius: 5px;
  padding: 19px 21px;
}

.emotion-5::after {
  position: absolute;
  right: -8px;
  top: -8px;
  content: '';
  background-color: #2e5bff;
  background-image: url(./check-white.svg);
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 50%;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  height: 70px;
  margin: 0 12px 0 0;
  width: 70px;
  background-color: rgba(128,151,177,0.1);
}

.emotion-3 {
  margin: 0;
  font-weight: 500;
  line-height: 1.47;
}

.emotion-4 {
  margin: 0;
  color: #8798ad;
  font-weight: 400;
  line-height: 1.47;
}

.emotion-15 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #e0e7ff;
  border-radius: 5px;
  padding: 19px 21px;
}

<div
  className="emotion-33"
>
  <h3
    className="emotion-0"
  >
    Integrations
  </h3>
  <div
    className="emotion-32"
  >
    <p
      className="emotion-1"
    >
      Manage third-party app integrations.
    </p>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-2"
        >
          <img
            alt="InVision"
            src="./invision.svg"
          />
        </div>
        <div>
          <p
            className="emotion-3"
          >
            InVision
          </p>
          <p
            className="emotion-4"
          >
            Boards and prototypes
          </p>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-5"
      >
        <div
          className="emotion-2"
        >
          <img
            alt="GitHub"
            src="./github.svg"
          />
        </div>
        <div>
          <p
            className="emotion-3"
          >
            GitHub
          </p>
          <p
            className="emotion-4"
          >
            Commits data and history
          </p>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-15"
      >
        <div
          className="emotion-2"
        >
          <img
            alt="Slack"
            src="./slack.svg"
          />
        </div>
        <div>
          <p
            className="emotion-3"
          >
            Slack
          </p>
          <p
            className="emotion-4"
          >
            Messages and channels
          </p>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-15"
      >
        <div
          className="emotion-2"
        >
          <img
            alt="Mailchimp"
            src="./mailchimp.svg"
          />
        </div>
        <div>
          <p
            className="emotion-3"
          >
            Mailchimp
          </p>
          <p
            className="emotion-4"
          >
            Subscribers list
          </p>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-15"
      >
        <div
          className="emotion-2"
        >
          <img
            alt="Twitter"
            src="./twitter.svg"
          />
        </div>
        <div>
          <p
            className="emotion-3"
          >
            Twitter
          </p>
          <p
            className="emotion-4"
          >
            Tweets data
          </p>
        </div>
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-15"
      >
        <div
          className="emotion-2"
        >
          <img
            alt="Medium"
            src="./medium.svg"
          />
        </div>
        <div>
          <p
            className="emotion-3"
          >
            Medium
          </p>
          <p
            className="emotion-4"
          >
            Followers count
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings Notifications matches snapshot 1`] = `
.emotion-19 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-0 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: 0 -11px;
  padding: 0 8px;
}

.emotion-1 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0 0 25px 0;
  padding: 0 12px;
  line-height: 1.47;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-width: 36px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 87px 0 0;
  padding: 10px 11px;
}

.emotion-2 {
  margin-right: 58px;
  font-weight: 500;
  line-height: 1.47;
}

.emotion-2 p {
  margin: 0;
}

.emotion-2 p:nth-of-type(2) {
  color: #8798ad;
  font-weight: 400;
}

.emotion-3 {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-4 {
  position: relative;
  border-radius: 10px;
  height: 20px;
  width: 36px;
  background-color: rgba(135,152,173,0.4);
  cursor: pointer;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.css-e5bvf:disabled + .emotion-4 {
  opacity: 0.4;
}

.css-e5bvf:checked:enabled + .emotion-4 {
  background-color: #33ac2e;
}

.emotion-4::before {
  position: absolute;
  content: '';
  left: 2px;
  top: 2px;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  background-color: #fff;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.css-e5bvf:checked + .emotion-4::before {
  -webkit-transform: translateX(16px);
  -ms-transform: translateX(16px);
  transform: translateX(16px);
}

<div
  className="emotion-19"
>
  <h3
    className="emotion-0"
  >
    Notifications
  </h3>
  <div
    className="emotion-18"
  >
    <p
      className="emotion-1"
    >
      Control your notification and auto-follow settings.
    </p>
    <label
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        <p>
          Email Notification
        </p>
        <p>
          Commits data and history
        </p>
      </div>
      <input
        className="emotion-3"
        type="checkbox"
      />
      <span
        className="emotion-4"
      />
    </label>
    <label
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        <p>
          Monthly Reports
        </p>
        <p>
          Commits data and history
        </p>
      </div>
      <input
        className="emotion-3"
        type="checkbox"
      />
      <span
        className="emotion-4"
      />
    </label>
    <label
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        <p>
          Push Notification
        </p>
        <p>
          Commits data and history
        </p>
      </div>
      <input
        className="emotion-3"
        type="checkbox"
      />
      <span
        className="emotion-4"
      />
    </label>
    <label
      className="emotion-5"
    >
      <div
        className="emotion-2"
      >
        <p>
          Quarter Reports
        </p>
        <p>
          Commits data and history
        </p>
      </div>
      <input
        className="emotion-3"
        type="checkbox"
      />
      <span
        className="emotion-4"
      />
    </label>
  </div>
</div>
`;

exports[`Settings Personal Data matches snapshot 1`] = `
.emotion-18 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-0 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: 0 -11px;
  padding: 0 8px;
}

.emotion-1 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0 0 25px 0;
  padding: 0 12px;
  line-height: 1.47;
}

.emotion-3 {
  display: inline-block;
  color: #b0bac9;
  font-size: 12px;
  font-weight: 500;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
  -webkit-flex: 0 1 290px;
  -ms-flex: 0 1 290px;
  flex: 0 1 290px;
  padding: 12px 11px;
}

.emotion-3:first-of-type {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
}

.emotion-2 {
  display: block;
  border: solid 1px #e0e7ff;
  border-radius: 5px;
  height: 38px;
  margin: 7px 0;
  max-width: 270px;
  padding: 10px 16px;
  width: 100%;
  background-color: rgba(224,231,255,0.2);
  color: #2e384d;
  font-family: inherit;
  font-size: 15px;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.emotion-2:disabled {
  opacity: 0.3;
}

.emotion-2:focus {
  border: solid 1px #2e5bff;
  outline: 0;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  padding: 0;
  font-size: 15px;
  font-weight: 500;
  cursor: pointer;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
  border-radius: 4px;
  height: 40px;
  width: 200px;
  background-color: #2e5bff;
  color: #fff;
  margin: 13px 0 18px 8px;
}

.emotion-17:disabled {
  opacity: 0.3;
  pointer-events: none;
}

.emotion-17:focus {
  outline: 0;
}

.emotion-17:enabled:hover {
  background-color: #0036fa;
}

<div
  className="emotion-18"
>
  <h3
    className="emotion-0"
  >
    Personal data
  </h3>
  <div
    className="emotion-16"
  >
    <p
      className="emotion-1"
    >
      Use this page to update your contact information and change your password.
    </p>
    <label
      className="emotion-3"
      defaultValue="appleseed_jane@mac.com"
      type="text"
    >
      Email address
      <input
        className="emotion-2"
      />
    </label>
    <label
      className="emotion-3"
      defaultValue="Jane"
      type="text"
    >
      First name
      <input
        className="emotion-2"
      />
    </label>
    <label
      className="emotion-3"
      defaultValue="Appleseed"
      type="text"
    >
      Last name
      <input
        className="emotion-2"
      />
    </label>
    <label
      className="emotion-3"
      defaultValue="1965-05-25"
      type="date"
    >
      Birth date
      <input
        className="emotion-2"
      />
    </label>
    <label
      className="emotion-3"
      defaultValue="password"
      type="password"
    >
      Current password
      <input
        className="emotion-2"
      />
    </label>
    <label
      className="emotion-3"
      type="password"
    >
      New password
      <input
        className="emotion-2"
      />
    </label>
    <label
      className="emotion-3"
      type="password"
    >
      Confirm
      <input
        className="emotion-2"
      />
    </label>
  </div>
  <button
    className="emotion-17"
    type="button"
  >
    Save Changes
  </button>
</div>
`;

exports[`Settings Theme matches snapshot 1`] = `
.emotion-28 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-0 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: 0 -11px;
  padding: 0 8px;
}

.emotion-1 {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0 0 25px 0;
  padding: 0 12px;
  line-height: 1.47;
}

.emotion-6 {
  padding: 8px 11px;
  margin: 0 13px 0 0;
}

.emotion-2 {
  border-radius: 4px;
  height: 65px;
  width: 120px;
  background: linear-gradient( 90deg, #2e5bff 33.33%, #e0e7ff 33.33%, #e0e7ff 66.66%, #8097b1 66.66% ) no-repeat;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  padding: 12px 0;
}

.emotion-3 {
  height: 0;
  margin: 0;
  width: 0;
  opacity: 0;
}

.emotion-4 {
  display: inline-block;
  border: solid 1px rgba(128,151,177,0.5);
  border-radius: 50%;
  height: 16px;
  margin: 0 8px 0 0;
  width: 16px;
  background-color: #fff;
}

.css-e5bvf:disabled + .emotion-4 {
  opacity: 0.4;
}

.css-e5bvf:checked:enabled + .emotion-4 {
  border: solid 4px #2e5bff;
  background-color: #fff;
}

.emotion-7 {
  border-radius: 4px;
  height: 65px;
  width: 120px;
  background: linear-gradient( 90deg, #8c54ff 33.33%, #00c1d4 33.33%, #00c1d4 66.66%, #fad050 66.66% ) no-repeat;
}

.emotion-12 {
  border-radius: 4px;
  height: 65px;
  width: 120px;
  background: linear-gradient( 90deg, #00a4de 33.33%, #3b7ed5 33.33%, #3b7ed5 66.66%, #00a550 66.66% ) no-repeat;
}

.emotion-17 {
  border-radius: 4px;
  height: 65px;
  width: 120px;
  background: linear-gradient( 90deg, #232a64 33.33%, #85c800 33.33%, #85c800 66.66%, #616266 66.66% ) no-repeat;
}

.emotion-22 {
  border-radius: 4px;
  height: 65px;
  width: 120px;
  background: linear-gradient( 90deg, #a728a3 33.33%, #f7e0ff 33.33%, #f7e0ff 66.66%, #7675ac 66.66% ) no-repeat;
}

<div
  className="emotion-28"
>
  <h3
    className="emotion-0"
  >
    Theme
  </h3>
  <div
    className="emotion-27"
  >
    <p
      className="emotion-1"
    >
      Select a color scheme for your Velocity app.
    </p>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-2"
      />
      <label
        className="emotion-5"
        defaultChecked={true}
      >
        <input
          className="emotion-3"
          name="theme"
          type="radio"
        />
        <span
          className="emotion-4"
        />
        Shelob
      </label>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-7"
      />
      <label
        className="emotion-5"
      >
        <input
          className="emotion-3"
          name="theme"
          type="radio"
        />
        <span
          className="emotion-4"
        />
        Denethor
      </label>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-12"
      />
      <label
        className="emotion-5"
      >
        <input
          className="emotion-3"
          name="theme"
          type="radio"
        />
        <span
          className="emotion-4"
        />
        Quickbeam
      </label>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-17"
      />
      <label
        className="emotion-5"
      >
        <input
          className="emotion-3"
          name="theme"
          type="radio"
        />
        <span
          className="emotion-4"
        />
        Shadowfax
      </label>
    </div>
    <div
      className="emotion-6"
    >
      <div
        className="emotion-22"
      />
      <label
        className="emotion-5"
      >
        <input
          className="emotion-3"
          name="theme"
          type="radio"
        />
        <span
          className="emotion-4"
        />
        Grima
      </label>
    </div>
  </div>
</div>
`;
